# BreadLabBot_vk

./: .dockerignore  Dockerfile  LICENSE  README.md  config.py  docker-compose.yml  logger.py  main.py  pyproject.toml  pytest.ini  settings.py  storage.py
.github/workflows/: CI_tests.yml  deploy.yml
bot/: handlers.py
controllers/: base_edit_recipe_handler.py  base_my_recipes_list_handler.py  base_state_handler.py  base_view_recipe_handler.py  delete_recipe.py  delete_recipe_handlers.py  edit_recipe_handlers.py  main_manu_handlers.py  main_menu.py  main_menu_handlers.py  my_recipes_list_handler.py  my_recipes_menu_handlers.py  proportions_calc_handlers.py  save_recipe_handlers.py  starter_calc_handlers.py  state_handlers_registry.py  view_recipe.py  view_recipe_handlers.py
core/: registry.py  session_manager.py
fsm/: add_recipe_fsm.py  load_recipe_fsm.py  main_menu_fsm.py  my_recipes_menu_fsm.py  tools_menu_fsm.py
tests/: test_formatters.py  test_session_manager.py  test_settings.py
utils/: api_client.py  formatters.py  keyboards.py  messages.py
