[project]
name = "breadlabbot-vk-new"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncio>=4.0.0",
    "pydot>=4.0.1",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "python-dotenv>=1.2.2",
    "python-statemachine>=3.0.0",
    "vkbottle>=4.8.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
